✨ 現在能設定獎項並在抽獎後將獎項內容顯示於 ResultAlert 及 Results 中

--- a/.example.env
+++ b/.example.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_DEFAULT_WHEEL_ITEMS=DEFAULT_WHEEL_ITEMS	# Separated all items with comma
 NEXT_PUBLIC_DEFAULT_WHEEL_IMAGE_PATH=DEFAULT_WHEEL_IMAGE_PATH
+NEXT_PUBLIC_DEFAULT_PRIZES=DEFAULT_PRIZES	# Separated all prizes with comma
